Prevented collapsing all definitions from making page shrink

--- a/src/pages/Results/Results.module.css
+++ b/src/pages/Results/Results.module.css
@@ -9,6 +9,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin: 1rem;
+  align-self: normal;
 }
 .name,
 .rank,
